# kk2-spotify-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  reflektion.md  te.ipynb
app/: main.py  routes.py
app/llm/: __init__.py  base.py  llm.py  models.py
app/tests/: test_endpoints.py  test_lmm.py  test_schemas.py
