[project]
name = "kk2-spotify-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "huggingface-hub>=1.16.1",
    "kagglehub>=1.0.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
